--- a/Checkbox/checkbox1/checkbox.html
+++ b/Checkbox/checkbox1/checkbox.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href= "checkbox.css" />
+		<link rel="stylesheet" href= "../../css/font-awesome.min.css " />
 		<meta charset="UTF-8">
 	</head>
 	<body>
@@ -11,7 +12,7 @@
 			<div class="box">
 				<input type="checkbox" name="" id="">
 				<div class="boxContent">
-				<img src= 'images/music.png'>
+				<i class="fa fa-music" aria-hidden="true"></i>
 				<p>Music</p>
 				</div>
 			</div>
@@ -19,7 +20,7 @@
 			<div class="box">
 				<input type="checkbox" name="" id="">
 				<div class="boxContent">
-				<img src= 'images/movie.png'>
+				<i class="fa fa-video-camera" aria-hidden="true"></i>
 				<p>Movies</p>
 				</div>
 			</div>
@@ -27,7 +28,7 @@
 			<div class="box">
 				<input type="checkbox" name="" id="">
 				<div class="boxContent">
-				<img src= 'images/book.png'>
+				<i class="fa fa-book" aria-hidden="true"></i>
 				<p>Books</p>
 				</div>
 			</div>
@@ -35,7 +36,7 @@
 			<div class="box">
 				<input type="checkbox" name="" id="">
 				<div class="boxContent">
-				<img src= 'images/run.png'>
+				<i class="fa fa-futbol-o" aria-hidden="true"></i>
 				<p>Sports</p>
 				</div>
 			</div>
@@ -43,7 +44,7 @@
 			<div class="box">
 				<input type="checkbox" name="" id="">
 				<div class="boxContent">
-				<img src= 'images/route.png'>
+				<i class="fa fa-globe" aria-hidden="true"></i>
 				<p>Travel</p>
 				</div>
 			</div>
@@ -51,7 +52,7 @@
 			<div class="box">
 				<input type="checkbox" name="" id="">
 				<div class="boxContent">
-				<img src= 'images/mobile.png'>
+				<i class="fa fa-mobile" aria-hidden="true"></i>
 				<p>Tech</p>
 				</div>
 			</div>
