--- a/Image_Slider/animeGallery/animeGallery.html
+++ b/Image_Slider/animeGallery/animeGallery.html
@@ -19,9 +19,9 @@
 		<nav>
 			<ul>
 				<li><a href="../../Home_Page/homePage1/homePage1.html" class="option">Home</a></li>
-				<li><a href="#" class="option">Project</a></li>
+				<li><a href="../../Image_Slider/animeWatchList/animeWatchList.html" class="option">Watchlist</a></li>
 				<li><a href="#" class="option">Contact</a></li>
-				<li><a href="#" class="option"><img src="profile.png"/></a></li>
+				<li><a href="#" class="option"><img src="profile.png"/><div id="circle"></div></a></li>
 			</ul>
 			<span class="slide"></span>
 		</nav>
