--- a/Home_Page/homePage1/homePage1NoProfile.html
+++ b/Home_Page/homePage1/homePage1NoProfile.html
@@ -20,18 +20,21 @@
 				<!--Inizio Menu-->
 				<nav>
 					<ul>
-						<li><a href="../../Image_Slider/animeGallery/animeGallery.html" class="option">Gallery</a></li>
+						<li><a href="../../Image_Slider/animeGallery/animeGalleryNoProfile.html" class="option">Gallery</a></li>
 						<li><a href="../../Image_Slider/animeWatchList/animeWatchList.html" class="option">Watchlist</a></li>
 						<li><a href="#" class="option">Contact</a></li>
 						<li><a href="#" class="option">About</a></li>
-						<li><a href="#" class="option"><img src="profile.png"/><div id="circle"></div></a></li>
+						<li><a href="../../Login_Page/animeLoginPage/animeLoginPage.html" class="option">Login</a></li>
 						
 					</ul>
 					<span class="slide"></span>
 				</nav>
 				<!--Fine Menu-->
-                <h2>Welcome back!</h2>
-				<p>Hello there! What anime do you feel like watching today?</p>
+                <h2>Welcome to Anime Collection!</h2>
+				<p>Hello there! 
+				I hope you all will enjoy the service, I've been working hard on it.<br>
+				Best regards,<br>
+				Francesco Catania.</p>
             </div>
 			
         </section>
