--- a/Image_Slider/animeWatchList/animeWatchListNoProfile.html
+++ b/Image_Slider/animeWatchList/animeWatchListNoProfile.html
@@ -21,14 +21,14 @@
 				<li><a href="../../Home_Page/homePage1/homePage1.html" class="option">Home</a></li>
 				<li><a href="../../Image_Slider/animeGallery/animeGallery.html" class="option">Gallery</a></li>
 				<li><a href="#" class="option">Contact</a></li>
-				<li><a href="#" class="option"><img src="profile.png"/><div id="circle"></div></a></li>
+				<li><a href="../../Login_Page/animeLoginPage/animeLoginPage.html" class="option">Login</a></li>
 			</ul>
 			<span class="slide"></span>
 		</nav>
 		<!--Fine Primo Menu-->
 		<br><br>
 		<h1 id="titolo">WatchList</h1>
-		<p class="pageDescription">Here I present my finest selection...</p>
+		<p class="pageDescription">You're not registered yet, but I can show you something alredy...</p>
 		<div class="container">
 	<!--Card 1-->
 		<div class="card mt-5 ml-10 ">  
