--- a/Image_Slider/animeWatchList/animeWatchList.html
+++ b/Image_Slider/animeWatchList/animeWatchList.html
@@ -28,7 +28,7 @@
 		<!--Fine Primo Menu-->
 		<br><br>
 		<h1 id="titolo">WatchList</h1>
-		<p class="pageDescription">Here I present my finest selection...</p>
+		<p class="pageDescription">Here I present you my finest selection...</p>
 		<div class="container">
 	<!--Card 1-->
 		<div class="card mt-5 ml-10 ">  
@@ -41,9 +41,10 @@
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.
         </p>
       </div>
-      <div class="px-6 pt-4 pb-2">
+      <div class="footerCard">
         <button class="mostra"><i class="fa fa-plus-square" aria-hidden="true"></i></button>
         <button class="riduci"><i class="fa fa-minus-square" aria-hidden="true"></i></button>
+		<button class="favourite"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
 		<div class="cardTitle">Red Heaven</div>
       </div>
     </div>
@@ -59,9 +60,10 @@
           This is just a copy, I wanted to check the disposition of multiple cards...
         </p>
       </div>
-      <div class="px-6 pt-4 pb-2">
+      <div class="footerCard">
         <button class="mostra"><i class="fa fa-plus-square" aria-hidden="true"></i></button>
         <button class="riduci"><i class="fa fa-minus-square" aria-hidden="true"></i></button>
+		<button class="favourite"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
 		<div class="cardTitle">Red Heaven</div>
 	</div>
     </div>
@@ -76,9 +78,10 @@
           This is just a copy, I wanted to check the disposition of multiple cards...
         </p>
       </div>
-      <div class="px-6 pt-4 pb-2">
+      <div class="footerCard">
         <button class="mostra"><i class="fa fa-plus-square" aria-hidden="true"></i></button>
         <button class="riduci"><i class="fa fa-minus-square" aria-hidden="true"></i></button>
+		<button class="favourite"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
 		<div class="cardTitle">Red Heaven</div>
 	</div>
     </div>
@@ -94,9 +97,10 @@
           This is just a copy, I wanted to check the disposition of multiple cards...
         </p>
       </div>
-      <div class="px-6 pt-4 pb-2">
+      <div class="footerCard">
         <button class="mostra"><i class="fa fa-plus-square" aria-hidden="true"></i></button>
         <button class="riduci"><i class="fa fa-minus-square" aria-hidden="true"></i></button>
+		<button class="favourite"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
 		<div class="cardTitle">Red Heaven</div>
 		</div>
     </div>
@@ -111,9 +115,10 @@
           This is just a copy, I wanted to check the disposition of multiple cards...
         </p>
       </div>
-      <div class="px-6 pt-4 pb-2">
+      <div class="footerCard">
         <button class="mostra"><i class="fa fa-plus-square" aria-hidden="true"></i></button>
         <button class="riduci"><i class="fa fa-minus-square" aria-hidden="true"></i></button>
+		<button class="favourite"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
 		<div class="cardTitle">Red Heaven</div>
 		</div>
     </div>
