--- a/Image_Slider/animeWatchList/animeWatchListNoProfile.html
+++ b/Image_Slider/animeWatchList/animeWatchListNoProfile.html
@@ -41,7 +41,7 @@
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.
         </p>
       </div>
-      <div class="px-6 pt-4 pb-2">
+      <div class="footerCard">
         <button class="mostra"><i class="fa fa-plus-square" aria-hidden="true"></i></button>
         <button class="riduci"><i class="fa fa-minus-square" aria-hidden="true"></i></button>
 		<div class="cardTitle">Red Heaven</div>
@@ -59,7 +59,7 @@
           This is just a copy, I wanted to check the disposition of multiple cards...
         </p>
       </div>
-      <div class="px-6 pt-4 pb-2">
+      <div class="footerCard">
         <button class="mostra"><i class="fa fa-plus-square" aria-hidden="true"></i></button>
         <button class="riduci"><i class="fa fa-minus-square" aria-hidden="true"></i></button>
 		<div class="cardTitle">Red Heaven</div>
@@ -76,7 +76,7 @@
           This is just a copy, I wanted to check the disposition of multiple cards...
         </p>
       </div>
-      <div class="px-6 pt-4 pb-2">
+      <div class="footerCard">
         <button class="mostra"><i class="fa fa-plus-square" aria-hidden="true"></i></button>
         <button class="riduci"><i class="fa fa-minus-square" aria-hidden="true"></i></button>
 		<div class="cardTitle">Red Heaven</div>
@@ -94,7 +94,7 @@
           This is just a copy, I wanted to check the disposition of multiple cards...
         </p>
       </div>
-      <div class="px-6 pt-4 pb-2">
+      <div class="footerCard">
         <button class="mostra"><i class="fa fa-plus-square" aria-hidden="true"></i></button>
         <button class="riduci"><i class="fa fa-minus-square" aria-hidden="true"></i></button>
 		<div class="cardTitle">Red Heaven</div>
@@ -111,7 +111,7 @@
           This is just a copy, I wanted to check the disposition of multiple cards...
         </p>
       </div>
-      <div class="px-6 pt-4 pb-2">
+      <div class="footerCard">
         <button class="mostra"><i class="fa fa-plus-square" aria-hidden="true"></i></button>
         <button class="riduci"><i class="fa fa-minus-square" aria-hidden="true"></i></button>
 		<div class="cardTitle">Red Heaven</div>
